Rename .shtml files to .html, since no SHTML features were used, fixed minor bug where error messages would display incorrectly on mobile

--- a/index.css
+++ b/index.css
@@ -394,9 +394,21 @@
 }
 
 .error {
-  width:800px;
-  font-size:12pt;
   font-style:italic;
   list-style:none;
   display:inline-block;
+}
+
+@media not all and (max-width: 1200px) {
+  .error {
+    width:800px;
+    font-size:12pt;
+  }
+}
+
+@media all and (max-width: 1200px) {
+  .error {
+    width:92%;
+    font-size:10pt;
+  }
 }
